# kollater

./: .gitignore  .gitmodules  BROWSER_SETUP.md  README.md  check-testbed.sh  docker-compose.yml  reasoning.md  restart-testbed.sh  start-testbed.sh  test-harness.sh
client/: README.md  bun.lockb  enable-threads.js  index.html  package-lock.json  package.json  vite.config.ts
client/src/: app.css  app.tsx  dropzone.tsx  eyes.glsl  fileExplorer.tsx  fileList.tsx  visualizer.txt
docs/: CNAME  README.md  enable-threads.js  index.html  test.txt
docs/assets/: glitzWorker-Bs-6ZG3R.js  glitzWorker-DJX9rjr5.js  glitzWorker-W3QwtMuV.js  index-Bzo9U71V.css  index-C2PSJdN4.css
docs/js/: noiseProcessor.js
server/js/: CMakeLists.txt  bun.lockb  main.js  package.json  signaling.js  simplepeer.js
server/rust/: .gitignore
server/signaling/: README.md  bun.lockb  index.ts  package.json
server/support/: Cargo.toml
server/support/src/: main.rs
server/worker/: Cargo.toml  README.md  bun.lockb  index.ts  package.json  run.sh
server/worker/crypto/: encryptionKey
server/worker/src/: comms.ts  constants.ts  filer.ts  main.rs  utils.ts
tests/: README-S3-TESTS.md  package.json  playwright.config.ts  tsconfig.json
tests/tests/: comprehensive-pipeline.spec.ts  console-debug.spec.ts  debug-streaming-upload.spec.ts  debug-upload-flow.spec.ts  debug-upload.spec.ts  end-to-end-http-upload.spec.ts  force-upload-test.spec.ts  manual-upload.spec.ts  streaming-protocol-test.spec.ts  upload.spec.ts  webrtc-small-upload.spec.ts  webrtc-upload.spec.ts  worker-upload-test.spec.ts
(+41 files in other folders)
