[package]
name = "libdatachannel_signaling_server_example"
version = "0.2.0"
authors = ["Paul-Louis Ageneau"]
license = "MPL-2.0"
edition = "2018"

[dependencies]
tokio = { version = "*", features = ["full"] }
datachannel = "0.12.1"
async-channel = "2"
async-tungstenite = { version = "0.25", features = ["tokio-runtime"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

futures-util = "*"
futures-channel = "*"
json = "*"
uuid = { version = "1", features = ["serde", "v4"] }
log = { version = "0.4", optional = true }
env_logger = "0.11"
memory-stats = "1.0.0"


[features]
default = ["log"]
log = ["dep:log"]