[package]
name = "worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2"
derivative = "2"
log = { version = "0.4", optional = true }
env_logger = "0.11"
datachannel = "0.12.1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-tungstenite = { version = "0.25", features = ["tokio-runtime"] }
uuid = { version = "1", features = ["serde", "v4"] }
tokio = { version = "1", features = ["full"]} # ["rt", "macros", "time"] }
memory-stats = "1.0.0"



[features]
default = ["log"]
log = ["dep:log"]